--- a/public/elements_table.html
+++ b/public/elements_table.html
@@ -100,6 +100,7 @@ var tableHeader =  '<tr>' +
 
 
 function refresh() {
+    const show_inside_bin_elements = (new window.URLSearchParams(window.location.search)).get('show_inside_bin_elements') !== null
     $.ajax({
         url: 'api/elements' + (show_inside_bin_elements ? '?show_inside_bin_elements=yes' : '')
     }).then(function(data) {
