Better state handling with multiple mixers

--- a/public/elements_table.html
+++ b/public/elements_table.html
@@ -74,8 +74,8 @@ function makeElementRowWithPads(table, element) {
         }
 
         var messages = []
-        if (pad.blocked) messages.push('<em>BLOCKED!</em>')
-        if (pad.blocking) messages.push('<em>BLOCKING!</em>')
+        if (pad.blocked) messages.push('<span class="badge badge-warning">BLOCKED!</span>')
+        if (pad.blocking) messages.push('<span class="badge badge-danger">BLOCKING!</span>')
         cells.push($('<td></td>').append(messages.join(' ')))
 
         cells.push($('<td></td>').append(pad.caps))
