Allow creation and deletion of mixers in the GUI

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#" id="new-input-button">Input</a>
+            <a class="dropdown-item" href="#" id="new-mixer-button">Mixer</a>
             <a class="dropdown-item" href="#" id="new-output-button">Output</a>
             <a class="dropdown-item" href="#" id="new-overlay-button">Overlay</a>
           </div>
