Config file improvements

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#" id="restart-brave-button">Restart Brave</a>
+            <a class="dropdown-item" href="api/config/current.yaml">Download current config</a>
             <a class="dropdown-item" href="#" id="refresh-page-button">Refresh page</a>
             <a class="dropdown-item" target="_blank" href="elements_table">Debug view (GStreamer elements)</a>
           </div>
