Initial JQuery updates

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.1/css/bootstrap-slider.min.css" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/switch.css">
         <link rel="icon" href="data:,">
         <title>Brave</title>
     </head>
@@ -58,7 +59,13 @@
         <div id="preview-bar"></div>
 
         <div class="container-fluid">
-            <div class="row" id="cards"></div>
+          <div class="row justify-content-between">
+            <!-- <div class="row" id="cards"></div> -->
+            <div class="col-sm-6" id="cards">
+            </div>
+            <div class="col-sm-6" id="rhs">
+            </div>
+          </div>
         </div>
 
         <div style="clear:both"></div>
