Further support for new Vue interface

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main class="container-fluid">
-        <div id="preview-bar"></div>
+        <preview-bar></preview-bar>
         <div class="row">
           <div class="col-sm-6" id="lhs">
               <table class="blocks-table">
@@ -61,7 +61,9 @@
     </main>
     </div>
     <script src="js/constants.js"></script>
+    <script src="js/webrtc.js"></script>
     <script src="js/components.js"></script>
+    <script src="js/preview.js"></script>
     <script src="js/block-fields.js"></script>
     <script src="js/index.js"></script>
     <script src="js/websocket.js"></script>
