Add audiobar support

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
     <script src="js/constants.js"></script>
     <script src="js/webrtc.js"></script>
     <script src="js/components.js"></script>
+    <script src="js/preview-audio-bar.js"></script>
     <script src="js/preview.js"></script>
     <script src="js/block-fields.js"></script>
     <script src="js/index.js"></script>
